# time-jitsurei

./: CHANGELOG.md  flake.nix  time-jitsurei.cabal
src/: Parsing.hs  UTCTime.hs
