cabal-version:   3.4
name:            time-jitsurei
version:         0.1.0.0
synopsis:        Time jitsurei

-- description:
homepage:        https://github.com:shinzui/time-jitsurei.git
license:         MIT
license-file:    LICENSE
author:          Nadeem Bitar
maintainer:      nadeem@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  MyLib

  -- other-modules:
  -- other-extensions:
  build-depends:    base ^>=4.18
  hs-source-dirs:   src
  default-language: GHC2021

test-suite time-jitsurei-test
  import:           warnings
  default-language: GHC2021

  -- other-modules:
  -- other-extensions:
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base           ^>=4.18
    , time-jitsurei
